--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fabianbeiner/php-imdb-grabber",
+* "name": "fabianbeiner/php-imdb-grabber",
   "type": "library",
   "description": "This PHP library enables you to scrape data from IMDB.com.",
   "keywords": [
@@ -24,3 +24,4 @@
         "files": ["imdb.class.php"]
   }
 }
+ 
